--- a/arch/arm64/configs/meson_defconfig
+++ b/arch/arm64/configs/meson_defconfig
@@ -518,6 +518,7 @@ CONFIG_VIDEO_MESON_AO_CEC=y
 CONFIG_VIDEO_MESON_G12A_AO_CEC=y
 CONFIG_DRM=y
 # CONFIG_DRM_FBDEV_EMULATION is not set
+CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_I2C_CH7006=y
 CONFIG_DRM_I2C_SIL164=y
 CONFIG_DRM_PANEL_SIMPLE=y
