--- a/arch/arm64/configs/meson_defconfig
+++ b/arch/arm64/configs/meson_defconfig
@@ -538,11 +538,11 @@ CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_SOUND=y
 CONFIG_SND=y
-CONFIG_SND_DUMMY=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_MESON_AXG_SOUND_CARD=y
 CONFIG_SND_SOC_AK4613=y
+CONFIG_SND_SOC_MAX98357A=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_HIDRAW=y
