YUKAWA: arm64: meson_defconfig: enable VRTC driver
Signed-off-by: Neil Armstrong <narmstrong@baylibre.com>

Change-Id: Ib7a962b78115341d3ee2091625c75de3cb2ae119

--- a/arch/arm64/configs/meson_defconfig
+++ b/arch/arm64/configs/meson_defconfig
@@ -677,6 +677,7 @@ CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_EDAC=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_MAX77686=y
+CONFIG_RTC_DRV_MESON_VRTC=y
 CONFIG_RTC_DRV_RK808=y
 CONFIG_RTC_DRV_S5M=y
 CONFIG_RTC_DRV_DS3232=y
