--- a/arch/arm64/boot/dts/amlogic/meson-g12a-sei510.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-g12a-sei510.dts
@@ -23,7 +23,7 @@
 
 		button-onoff {
 			label = "On/Off";
-			linux,code = <KEY_POWER>;
+			linux,code = <BTN_0>;
 			press-threshold-microvolt = <1700000>;
 		};
 	};
